fix the bugs that when the errors occurs or click 'cancel' but the progress bar can not be hided,and fix the bugs 'the requested URI too long' of the export of manager

--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -109,3 +109,22 @@ hr{
 		font-size:65px!important;
 	}
 }
+
+.progress{
+	overflow:auto;
+	padding:20px 10%;
+	padding-bottom:10%;
+	position:absolute;
+	top:0px;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.95);
+	display:none;
+	color:#efefef;
+	font-size:17px;
+	left:0px;
+	top:0px;
+	z-index:101;
+	font-weight:100;
+	text-align:center;
+}
